# herald_crawler

./: .gitignore  README.md  make_path_reviewer_list.sh  pyproject.toml  requirements-dev.txt  requirements.txt
herald_scraper/: __init__.py  cli.py  client.py  conduit_client.py  crawler.py  exceptions.py  models.py  parsers.py  people_client.py  resolvers.py
scripts/: ANONYMIZATION_WORKFLOW.md  analyze_html_structure.py  analyze_listing.py  analyze_listing_simple.py  anonymize_fixtures.py  debug_cookie.py  debug_group_collector.py  debug_members_html.py  debug_members_page.py  extract_conditions_actions.py  fetch_conduit_fixtures.py  fetch_fixtures.py  fetch_people_fixtures.py  inspect_fixtures.py  resolve_github_usernames.py  rewrite_git_history.py  test_pmo_graphql.py  update_test_assertions.py  verify_no_pii.py
tests/: __init__.py  conftest.py  test_client.py  test_conduit_client.py  test_crawler.py  test_models.py  test_parsers.py  test_people_client.py  test_resolvers.py
tests/fixtures/: README.md
tests/fixtures/conduit/: bugzilla_account_search_empty_response.json  bugzilla_account_search_response.json  error_response.json  project_not_found_response.json  project_search_response.json  user_search_response.json  user_search_single_response.json
tests/fixtures/groups/: android-reviewers-members.html  android-reviewers.html  desktop-theme-reviewers-members.html  desktop-theme-reviewers.html  dom-storage-reviewers-members.html  dom-storage-reviewers.html  geckodriver-reviewers-members.html  geckodriver-reviewers.html  geckoview-api-reviewers-members.html  geckoview-api-reviewers.html  omc-reviewers-members.html  omc-reviewers.html  profiler-reviewers-members.html  profiler-reviewers.html  reusable-components-reviewers-rotation-members.html  (+5 more)
(+91 files in other folders)
